--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_executable(minishell main.c)
 include_directories(${minishell_SOURCE_DIR}/src/lib)
 add_subdirectory(lib)
 target_link_libraries(minishell process)
+target_link_libraries(minishell job)
