--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ include_directories(${minishell_SOURCE_DIR}/src/lib)
 add_subdirectory(lib)
 target_link_libraries(minishell process)
 target_link_libraries(minishell job)
+target_link_libraries(minishell shell)
