--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(minishell main.c)
+add_executable(main main.c)
 include_directories(${minishell_SOURCE_DIR}/src/lib)
 add_subdirectory(lib)
-target_link_libraries(minishell process)
-target_link_libraries(minishell job)
-target_link_libraries(minishell shell)
+target_link_libraries(main process)
+target_link_libraries(main job)
+target_link_libraries(main shell)
